<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">NEI</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_app_fragment">App</string>


    // for splash WelcomeScreenActivity
    <string name="welcome">Welcome</string>

    // for HomeActivity
    <string name="connect_device">Connect to Device</string>

    // for action bar HomeActivity / All
    <string name="action_settings">Settings</string>
    <string name="action_on_off">Power OFF</string>

    // for HomeActivity / PresetsActivity / AppFragment
    <string-array name="select_temperature">
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
        <item>-4</item>
        <item>-5</item>
        <item>-6</item>
        <item>-7</item>
        <item>-8</item>
        <item>-9</item>
        <item>-10</item>
    </string-array>

    <string-array name="select_temperature_max">
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="select_temperature_min">
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
        <item>-4</item>
        <item>-5</item>
        <item>-6</item>
        <item>-7</item>
        <item>-8</item>
        <item>-9</item>
        <item>-10</item>
    </string-array>

    // for PresetsActivity
    <string-array name="select_alarm_ringtone">
        <item>-- Select an Alarm --</item>
        <item>"       Ringtone 1      "</item>
        <item>"       Ringtone 2      "</item>
    </string-array>

    // for ProfileFragment Buttons and Plain Text
    <string name="edit_username">Enter a Username</string>
    <string name="edit_email">Enter an Email</string>

    // for AppFragment TextView and Pickers

    // for DeviceFragment Button
    <string name="button_open_nordic">Nordic nRF UART</string>

    // for all Settings Fragments
    <string name="button_save">Save</string>
    <string name="button_show_all">Show All</string>
    <string name="button_save_all">Save All</string>

    // Nordic Semiconductors BLE stuff
    <!-- <string name="app_name">nRF UART v2.0</string> -->
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>

</resources>
